--- a/chessgame.html
+++ b/chessgame.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,33 +11,39 @@
     <link rel="stylesheet" href="css/chessboard-1.0.0.css">
     <link rel="stylesheet" href="css/game.css">
 </head>
+
 <body>
     <div class="board-container">
         <div id="board2"></div>
     </div>
-    
+
     <br><br>
     <!--Game Info-->
     <center>
         <div class="info">
             <div class="info-raw">
-                <div class="info-col col1">ROBOT SERIAL</div><div class="info-col col2">: 72365RF764</div>
+                <div class="info-col col1">ROBOT SERIAL</div>
+                <div class="info-col col2">: 72365RF764</div>
             </div>
             <div class="info-raw">
-                <div class="info-col col1">GAME ID</div><div class="info-col col2">: 002</div>
+                <div class="info-col col1">GAME ID</div>
+                <div class="info-col col2">: 002</div>
             </div>
             <div class="info-raw">
-                <div class="info-col col1">ELO</div><div class="info-col col2">: 200</div>
+                <div class="info-col col1">ELO</div>
+                <div class="info-col col2">: 200</div>
             </div>
             <div class="info-raw">
-                <div class="info-col col1">STATE</div><div class="info-col col2">: Ongoing</div>
+                <div class="info-col col1">STATE</div>
+                <div class="info-col col2">: Ongoing</div>
             </div>
         </div>
     </center>
-    
+
 
     <!--Importing Js Files-->
     <script src="js/chessboard-1.0.0.js"></script>
     <script src="js/board.js"></script>
 </body>
+
 </html>
